--- a/index.html
+++ b/index.html
@@ -3,7 +3,96 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Template</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="theme-switch-wrapper">
+      <span id="toggle-icon"
+        ><span class="toogle-text">Light-Mode </span> <i class="fas fa-sun"></i
+      ></span>
+      <label class="theme-switch">
+        <input type="checkbox" class="input" />
+        <div class="slider round"></div>
+      </label>
+    </div>
+
+    <nav id="nav">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#project">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <section id="home">
+      <div class="title-group">
+        <h1>Custom title here</h1>
+        <h2>Welcome to the website</h2>
+      </div>
+    </section>
+    <section id="about">
+      <h1>About</h1>
+      <div class="about-container">
+        <div class="image-container">
+          <h2>Web Innovation</h2>
+          <img
+            src="./img/undraw_proud_coder_light.svg"
+            alt="proud coder"
+            id="image1"
+          />
+        </div>
+        <div class="image-container">
+          <h2>Problem Solving</h2>
+          <img
+            src="./img/undraw_feeling_proud_light.svg"
+            alt="proud coder"
+            id="image2"
+          />
+        </div>
+        <div class="image-container">
+          <h2>High Concept</h2>
+          <img
+            src="./img/undraw_conceptual_idea_light.svg"
+            alt="proud coder"
+            id="image3"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="project">
+      <h1>Projects</h1>
+      <div class="buttons">
+        <button class="primary">Primary</button>
+        <button class="secondary">Secondary</button>
+        <button class="primary" disabled>Disabled</button>
+        <button class="outline">Outline</button>
+        <button class="secondary outline">All Outline</button>
+        <button class="outline" disabled>Disabled</button>
+      </div>
+      <div class="text-box" id="text-box">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam libero
+          explicabo nulla ipsum blanditiis, eligendi ut odio dignissimos quaerat
+          quasi alias, quis totam provident eveniet non dolore dicta
+          perspiciatis quisquam!
+        </p>
+      </div>
+    </section>
+    <section id="contact">
+      <h1>Contacts</h1>
+      <div class="social-icons">
+        <i class="fab fa-github"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-dev"></i>
+      </div>
+    </section>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
